--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,8 +1,8 @@
 <body class="body-index">
   <div class="container-fluid h-100 d-flex flex-column justify-content-start align-items-center mt-4">
     <h1 class="mt-4 text-center titles">Log In</h1>
-    <div class="p-4 mx-auto rounded d-md-flex d-lg-flex" style="background-color: rgb(240, 240, 240);">
-      <form class="d-flex flex-column justify-content-center w-100 mx-auto" action="/auth/login" method="POST">
+    <div class="mx-auto rounded d-md-flex d-lg-flex" style="background-color: rgb(240, 240, 240);">
+      <form class="p-5 d-flex flex-column justify-content-center w-100 mx-auto" action="/auth/login" method="POST">
         <div class="form-group mx-auto" style="max-width: 400px;">
           <label class="crud-labels">Username</label>
           <input type="text" name="username" class="form-control" placeholder="Enter username">
