--- a/views/posts/new-post.hbs
+++ b/views/posts/new-post.hbs
@@ -35,7 +35,7 @@
         <br>
 
         <label class="crud-labels">Picture:
-            <input class="crud-img" type="file" name="img" />
+            <input class="form-control crud-img" type="file" name="img" />
         </label>
         <br>
 
