--- a/views/posts/post-create.hbs
+++ b/views/posts/post-create.hbs
@@ -30,7 +30,7 @@
         </label>
         <br>
         <label class="crud-labels">Picture:
-            <input class="crud-img" type="file" name="img" />
+            <input class="form-control crud-img" type="file" name="img" />
         </label>
         <br>
         <button class="btn custom-btn btn1-lp" id="crud-btn-update" type="submit">Create Post</button>
