--- a/views/users/user-delete.hbs
+++ b/views/users/user-delete.hbs
@@ -15,7 +15,7 @@
     <br>
     <form action="/auth/profile/{{userInSession._id}}/delete" method="post">
     <label class="crud-labels">Type in your username
-        <input class="input-text-crud mb-4" type="text" name="userDeletion" placeholder="Your username"> <br>
+        <input class="input-text-crud" style="max-width: 300px;" type="text" name="userDeletion" placeholder="Your username"> <br>
     </label>
     <br>
         <button class="btn custom-btn btn1-lp" id="crud-btn-delete">Delete my account</button>
