--- a/views/users/user-edit.hbs
+++ b/views/users/user-edit.hbs
@@ -26,7 +26,7 @@
     <br>
 
     <label class="crud-labels">Profile picture: 
-      <input class="crud-img" type="file" name="profile-picture-image" />
+      <input class="form-control crud-img" type="file" name="profile-picture-image" />
       <input type="text" name="existingImage" hidden value="{{userInSession.profilePicture}}" />
     </label>
     <br>
