--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,16 +1,25 @@
 <body class="body-index">
 
   <div class="img-lp">
-    <div class="mt-5">
-      <h1 class="mingle-lp">mingle</h1>
-      <h4>Welcome to your one stop for all information</h4>
-      <hr class="line-lp">
+    <div class="pt-5 ms-lg-5">
+      <div class="container-fluid lp pt-lg-5">
+        <div class="d-flex flex-row pt-lg-5">
+          <h1 class="mingle-lp pb-5 pt-3 pt-lg-5">mingle</h1>
+        </div>
+        <div class="d-flex flex-row lp">
+          <h4 class="text-sm-center">Welcome to your one stop for all information</h4>
+        </div>
+        <div class="d-flex flex-row lp">
+          <hr class="line-lp">
+        </div>
 
+
+      </div>
       <div class="container-fluid lp">
         <div class="d-flex flex-row mb-4 mt-5 lp">
           <div class="d-flex flex-column lp">
-          <a class="btn custom-btn btn1-lp" id="btn1-lp" href="subreddit" role="button">Communities</a>
-        </div>
+            <a class="btn custom-btn btn1-lp" id="btn1-lp" href="subreddit" role="button">Communities</a>
+          </div>
         </div>
         <div class="d-flex flex-row flex-wrap mb-4 lp">
           <div class="d-flex flex-column mb-4 me-md-4 lp">
