--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
     <div class="pt-5 ms-lg-5">
       <div class="container-fluid lp pt-lg-5">
         <div class="d-flex flex-row pt-lg-5">
-          <h1 class="mingle-lp pb-5 pt-3 pt-lg-5">mingle</h1>
+          <h1 class="mingle-lp pb-5 pt-lg-5">mingle</h1>
         </div>
         <div class="d-flex flex-row lp">
           <h4 class="text-sm-center">Welcome to your one stop for all information</h4>
