--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,55 +18,46 @@
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">
-        <img src="https://res.cloudinary.com/dm6a8aocc/image/upload/v1673520510/mingle/mingleicon_on8eou.png" alt="Logo"
-          width="50" height="50" class="d-inline-block align-text-top" /> </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand" href="/"><img
+          src="https://res.cloudinary.com/dm6a8aocc/image/upload/v1673520510/mingle/mingleicon_on8eou.png" alt="Logo"
+          width="50" height="50" class="d-inline-block align-text-top" /></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse" id="navbarText">
+        {{#if userDetails}}
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active nbs" aria-current="page" href="/">Home</a>
-          </li>
-
-          {{#if userDetails}}
-
-          <li class="nav-item">
-            <a class="nav-link active nbs" aria-current="page" href="/auth/profile/{{userDetails._id}}">Profile</a>
-          </li>
-
-          <div id="nav-form">
-            <form class="d-flex" id="logout-form" action="/auth/logout" method="GET">
-            <div class="pp-div1">
-              <li class="nav-item">
-                <img src="{{userDetails.profilePicture}}" alt="Profile picture" style="width: 50px; border-radius: 10%">
-              </li>
-              <li class="nav-item hello"> Hello, {{userDetails.username}}!</li>
-              <li class="nav-item"><button class="nbs" id="logout-btn">Logout</button></li>
-              </div>
-            </form>
-          </div>
-
-          {{else}}
-          <li class="nav-item">
-            <a class="nav-link active nbs" aria-current="page" href="/auth/signup">Signup</a>
+            <a class="nav-link nbs" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active nbs" aria-current="page" href="/auth/login">Login</a>
+            <a class="nav-link nbs" href="/auth/profile/{{userDetails._id}}">Profile</a>
           </li>
-          {{/if}}
-
-
-
-
+          <li class="nav-item">
+          <a class="nav-link logout" href="/auth/logout">Logout</a>
           </li>
         </ul>
-
-
+        <span class="navbar-text hello pe-4">
+          <img src="{{userDetails.profilePicture}}" alt="Profile picture" style="width: 50px; border-radius: 10%">
+          Hello, {{userDetails.username}}!
+        </span>
+        {{else}}
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link nbs" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link nbs" href="/auth/signup">Signup</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link nbs" href="/auth/login">Login</a>
+          </li>
+        </ul>
+        {{/if}}
+      </div>
+    </div>
   </nav>
-
 
   {{{body}}}
 
