fixed the landing page and the nav bar for medium devices

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,10 @@
 <body class="body-index">
 
   <div class="img-lp">
-    <div class="pt-5 ms-lg-5">
-      <div class="container-fluid lp pt-lg-5">
-        <div class="d-flex flex-row pt-lg-5">
-          <h1 class="mingle-lp pb-5 pt-lg-5">mingle</h1>
+    <div class="pt-5 ms-lg-5 ms-md-5">
+      <div class="container-fluid lp pt-lg-5 pt-md-5">
+        <div class="d-flex flex-row pt-lg-5 pt-md-5">
+          <h1 class="mingle-lp pb-5 pt-lg-5 pt-md-5">mingle</h1>
         </div>
         <div class="d-flex flex-row lp">
           <h4 class="text-sm-center">Welcome to your one stop for all information</h4>
