--- a/views/posts/post-details.hbs
+++ b/views/posts/post-details.hbs
@@ -88,7 +88,7 @@
 
           <div class="card-bottom">
             {{#if postDetails.img}}
-            <img src="{{postDetails.img}}" alt="image" />
+            <img src="{{postDetails.img}}" alt="image" class="img-fluid" />
             {{/if}}
           </div>
 
