removed some padding in the navbar

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -38,7 +38,7 @@
           <a class="nav-link logout" href="/auth/logout">Logout</a>
           </li>
         </ul>
-        <span class="navbar-text hello pe-4">
+        <span class="navbar-text hello">
           <img src="{{userDetails.profilePicture}}" alt="Profile picture" style="width: 50px; border-radius: 10%">
           Hello, {{userDetails.username}}!
         </span>
